[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "themis-mcp"
version = "0.1.0"
description = "MCP server for THEMIS — Indian statutory law Q&A via retrieval-grounded LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Daniel Deshmukh" }]
keywords = ["mcp", "indian-law", "legal-ai", "themis", "bns", "ipc", "bnss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.27,<2",
    "themis-llm>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.scripts]
themis-mcp = "themis_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/themis_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
